@@ -1,3 +1,8 @@
+2008-08-27  Jonathan Pryor  <jpryor@novell.com>
+
+	* doc/en/index.xml, doc/en/Mono.Rocks/IEnumerableRocks.xml: Flush; removes
+	  IEnumerableRocks.Implode<T>(IEnumerable<T>,string,Action<StringBuilder,T>).
+
 2008-08-26  Jonathan Pryor  <jpryor@novell.com>
 
 	* Mono.Rocks.csproj: Reset the <TargetFrameworkVersion/> to 3.5 so that
